<resources>
    <string name="app_name">UrbanCycle</string>
    <string name="map_icon">map</string>
    <string name="profile_icon">profile</string>
    <string name="community_icon">community</string>
    <string name="rewards_icon">rewards</string>
    <string name="support_icon">support</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="User_Name">Enter Your User Name</string>
    <string name="First_Name">Enter Your First Name</string>
    <string name="Last_Name">Enter Your Last Name</string>
    <string name="Email_Address">Enter Your Email Address</string>
    <string name="plain_text_user_name">User Name</string>
    <string name="Password">Enter Password</string>
    <string name="Button_Sign_Up">Sign Up</string>
    <string name="back">Back</string>
    <string name="input_email_add">Please Enter Email Address...</string>
    <string name="back_button">Back</string>
    <string name="reset_button">Reset</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="google_maps_key">AIzaSyDjkjvP2QaWCdRqh7-AWw1vKcXNbGHNXzw</string>

    <string name="constraint" />
    <string-array name="location">
        <item>Kuala Lumpur</item>
        <item>Johor Bahru</item>
        <item>Penang</item>
    </string-array>
    <string name="please_enter_password">Please Enter Password...</string>
    <string name="end_route">End Route</string>
    <string name="walk">Walk</string>
    <string name="cycle">Cycle</string>
    <string name="transit">Transit</string>
    <string name="start">Start</string>
    <string name="Date">Choose Date</string>
    <string name="Time">Choose Time\n</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="enter_event_org">Enter event organizer\n</string>
    <string name="choose_location">Choose location</string>
    <string name="event_date">Event Date</string>
    <string name="event_location">Event Location</string>
    <string name="event_name">Event Name</string>
    <string name="event_organizer">Event Organizer</string>
    <string name="event_time">Event Time</string>


</resources>