<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@drawable/rounded_square"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvEventOrganizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_organizer"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvEventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_location"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_time"
        android:textColor="#000000"
        android:textSize="16sp" />


</LinearLayout>

